cluster/sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterhub
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
spec:
  ingressClassName: nginx
  rules:
  - host: sandbox-jupyterhub.privatelink.uksouth.azmk8s.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jupyterhub
            port: 
              name: http
  tls:
  - hosts:
    - sandbox-jupyterhub.privatelink.uksouth.azmk8s.io
    secretName: sandbox-jupyterhub.privatelink.uksouth.azmk8s.io-tls
